# xai-vit

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
notebooks/examples/: load_and_run_with_pretrained_weights.ipynb  load_hf_weights.ipynb
src/config/: config.yaml
src/data/: transform.py
src/models/vit/: README.md  attention.py  embeddings.py  transformer_block.py  vision_transformer.py
src/models/xai/: attention_rollout.py
src/utils/: config.py
tests/: config.py  embeddings_test.py  vit_test.py
